[gd_scene load_steps=28 format=3 uid="uid://bv0hep3nj7s5i"]

[ext_resource type="Script" uid="uid://c0g32ne6d7lqq" path="res://Scripts/cassette.gd" id="1_lurm7"]
[ext_resource type="Texture2D" uid="uid://cvtclg7lpuej1" path="res://Images/cassette/cassette front/1 label.png" id="2_cibml"]
[ext_resource type="Texture2D" uid="uid://bri5abvba2nda" path="res://Images/cassette/cassette front/2 case c v2.png" id="3_gr3wr"]
[ext_resource type="Texture2D" uid="uid://1jexkvbes2ne" path="res://Images/cassette/cassette front/3 gears v2.png" id="4_po4b5"]
[ext_resource type="FontFile" uid="uid://bf27d738cuys7" path="res://Font/RockSalt-Regular.ttf" id="5_2maxw"]
[ext_resource type="Texture2D" uid="uid://bc66jvhfkucid" path="res://Images/cassette/cassette front/A side.png" id="6_80ctp"]
[ext_resource type="Texture2D" uid="uid://bxu4re1jrhh2j" path="res://Images/cassette/cassette side/case side v2.png" id="8_8gkdm"]
[ext_resource type="Texture2D" uid="uid://bd6fqsna3edu2" path="res://Images/cassette/cassette top/1 case top v2.png" id="9_jjisy"]
[ext_resource type="Texture2D" uid="uid://dat1u8t86k05y" path="res://Images/cassette/cassette top/2 top label.png" id="10_dvxr3"]
[ext_resource type="Texture2D" uid="uid://bqvadmvpaliuo" path="res://Images/cassette/cassette front/text box.png" id="11_ecbxh"]
[ext_resource type="Texture2D" uid="uid://sv0sakk6sx8w" path="res://Images/cassette/cassette front/fuel.png" id="12_e2jji"]
[ext_resource type="FontFile" uid="uid://dtn7qee5h51x5" path="res://Font/atwriter.ttf" id="13_k18ir"]
[ext_resource type="PackedScene" uid="uid://fa4uhdufm02t" path="res://Scenes/cassette_action.tscn" id="13_qa70k"]
[ext_resource type="Texture2D" uid="uid://e3iajvgt4vy4" path="res://Images/action_icons/attack_back_block.png" id="14_qa70k"]
[ext_resource type="Texture2D" uid="uid://xqduxvie816x" path="res://Images/action_icons/versus.png" id="15_cibml"]
[ext_resource type="Texture2D" uid="uid://c64671rylr8jv" path="res://Images/action_icons/discard.png" id="16_q1l3l"]
[ext_resource type="Texture2D" uid="uid://d2jiuwd0gc6pj" path="res://Images/cassette/cassette front/flip cassette tooltip.png" id="18_88y17"]

[sub_resource type="FontVariation" id="FontVariation_avwf4"]
base_font = ExtResource("5_2maxw")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_lurm7"]
thickness = 4

[sub_resource type="Animation" id="Animation_5rfmn"]
resource_name = "Cassette_vanish"
length = 0.3
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6jk51"]
resource_name = "Hover_over"
length = 0.1
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -320)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/SideA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.09, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlipTooltip:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-390, -95), Vector2(-596, -485)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.001, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"print_start_animation"
}, {
"args": [],
"method": &"print_end_animation"
}]
}

[sub_resource type="Animation" id="Animation_bdam2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Top:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Front:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Front:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites/SideA:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprites:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FlipTooltip:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-390, -95)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FlipTooltip:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprites:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprites:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Area2D/CollisionShape2D:shape:size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(442, 563.333)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Area2D/CollisionShape2D:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -640)]
}

[sub_resource type="Animation" id="Animation_1rwco"]
resource_name = "SwitchToFront"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -139)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Top:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Front:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Front:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 20), Vector2(0, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.001, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"print_start_animation"
}, {
"args": [],
"method": &"print_end_animation"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D/CollisionShape2D:shape:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(442, 353.333), Vector2(442, 563.333)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Area2D/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(0, -640)]
}

[sub_resource type="Animation" id="Animation_75skt"]
resource_name = "SwitchToOtherSide"
length = 0.3
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Front:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.149, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(20, 0), Vector2(-20, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.149, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Side:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-223, 0), Vector2(0, 3), Vector2(223, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Side:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(0.840896, 1, 1.51572),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1), Vector2(0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites/Front/Gears:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.149, 0.15),
"transitions": PackedFloat32Array(1, 1, 1e-05),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_sagpx"]
resource_name = "SwitchToTopSide"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -139), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Top:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Front:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Front:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o46m7"]
_data = {
&"Cassette_vanish": SubResource("Animation_5rfmn"),
&"Hover_over": SubResource("Animation_6jk51"),
&"RESET": SubResource("Animation_bdam2"),
&"SwitchToFront": SubResource("Animation_1rwco"),
&"SwitchToOtherSide": SubResource("Animation_75skt"),
&"SwitchToTopSide": SubResource("Animation_sagpx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axh4p"]
size = Vector2(442, 563.333)

[node name="Cassette" type="Node2D"]
script = ExtResource("1_lurm7")

[node name="Sprites" type="Node2D" parent="."]
light_mask = 524288
visibility_layer = 524288

[node name="Front" type="Node2D" parent="Sprites"]

[node name="Label" type="Sprite2D" parent="Sprites/Front"]
texture = ExtResource("2_cibml")

[node name="Frame" type="Sprite2D" parent="Sprites/Front"]
texture = ExtResource("3_gr3wr")

[node name="Gears" type="Sprite2D" parent="Sprites/Front"]
texture = ExtResource("4_po4b5")

[node name="CassetteName" type="Label" parent="Sprites/Front"]
offset_left = -166.0
offset_top = -125.0
offset_right = 119.0
offset_bottom = -52.9999
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_2maxw")
theme_override_font_sizes/font_size = 26
text = "SUPA DORIFTO"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ASideLogo" type="Sprite2D" parent="Sprites/Front"]
light_mask = 524288
visibility_layer = 524288
position = Vector2(161, -90)
scale = Vector2(0.390625, 0.359375)
texture = ExtResource("6_80ctp")

[node name="Side" type="Node2D" parent="Sprites"]
position = Vector2(-223, 0)
scale = Vector2(1e-05, 1)

[node name="Frame" type="Sprite2D" parent="Sprites/Side"]
texture = ExtResource("8_8gkdm")

[node name="Top" type="Node2D" parent="Sprites"]
scale = Vector2(1, 1e-05)

[node name="Frame" type="Sprite2D" parent="Sprites/Top"]
texture = ExtResource("9_jjisy")

[node name="Label" type="Sprite2D" parent="Sprites/Top"]
texture = ExtResource("10_dvxr3")

[node name="CassetteName" type="Label" parent="Sprites/Top"]
offset_left = -92.0
offset_top = -20.0
offset_right = 91.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("FontVariation_avwf4")
theme_override_font_sizes/font_size = 16
text = "SUPA DORIFTO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SideA" type="Node2D" parent="Sprites"]
visible = false
light_mask = 262144
visibility_layer = 262144
scale = Vector2(1.1, 1.1)

[node name="Background" type="Sprite2D" parent="Sprites/SideA"]
light_mask = 524288
visibility_layer = 524288
position = Vector2(-9.54525, 47.2727)
scale = Vector2(1.11151, 0.681818)
texture = ExtResource("11_ecbxh")

[node name="Fuel" type="Sprite2D" parent="Sprites/SideA"]
light_mask = 524288
visibility_layer = 524288
position = Vector2(-203.636, -93.6363)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_e2jji")

[node name="Label" type="Label" parent="Sprites/SideA/Fuel"]
light_mask = 524288
visibility_layer = 524288
offset_left = -75.0
offset_top = -77.5
offset_right = 65.0
offset_bottom = 93.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("13_k18ir")
theme_override_font_sizes/font_size = 140
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Actions" type="Control" parent="Sprites/SideA"]
layout_mode = 3
anchors_preset = 0
offset_left = -148.0
offset_top = -39.0
offset_right = 130.0
offset_bottom = 133.0

[node name="Action" parent="Sprites/SideA/Actions" instance=ExtResource("13_qa70k")]
layout_mode = 1
anchor_right = 0.999999
anchor_bottom = 0.494186
offset_right = 2.00021

[node name="Action2" type="Control" parent="Sprites/SideA/Actions"]
anchors_preset = 0
anchor_top = 0.505814
anchor_right = 0.989209
anchor_bottom = 1.00581
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Sprites/SideA/Actions/Action2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.429091
anchor_top = 0.139536
anchor_right = 0.850912
anchor_bottom = 0.790699
offset_left = 2.0
offset_top = 3.00001
offset_right = 0.999191
offset_bottom = 2.00043
texture = ExtResource("14_qa70k")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Sprites/SideA/Actions/Action2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.177851
anchor_top = 0.0761104
anchor_right = 0.45058
anchor_bottom = 0.948203
offset_left = 1.0909
offset_top = -1.54545
offset_right = 1.0909
offset_bottom = -1.54545
texture = ExtResource("15_cibml")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="HSeparator" type="HSeparator" parent="Sprites/SideA/Actions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxLine_lurm7")

[node name="AfterPlay" type="Sprite2D" parent="Sprites/SideA"]
light_mask = 524288
visibility_layer = 524288
position = Vector2(181.818, 98.1818)
scale = Vector2(0.75, 0.75)
texture = ExtResource("16_q1l3l")
metadata/_edit_use_anchors_ = true

[node name="FlipTooltip" type="Sprite2D" parent="."]
visible = false
position = Vector2(-390, -95)
scale = Vector2(0.6, 0.6)
texture = ExtResource("18_88y17")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o46m7")
}

[node name="Area2D" type="Area2D" parent="."]
visible = false
scale = Vector2(1, 0.15)
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -640)
shape = SubResource("RectangleShape2D_axh4p")
one_way_collision_margin = 3.0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
